# aortaseg

./: pyproject.toml
aortaseg/: aorta_unet.py  dataset.py
scripts/: extract_slices.py  train.py
